feat(ui): add custom scrollbar styling
- Implemented custom scrollbar with 12px width for a better visual appearance.
- Styled scrollbar track with a light grey background (#f1f1f1) and 10px border-radius.
- Designed scrollbar thumb with a blue color (#1164b7), grab cursor, and 10px border-radius.
- Added smooth transition effect for the scrollbar thumb.
- Enhanced hover effect for scrollbar thumb with a darker blue color (#016fe5).

This commit enhances the user experience by providing a more visually appealing and interactive scrollbar.

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,23 @@
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1164b7;
+  cursor: grab;
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+transition: .3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #016fe5;
+}
