Feauter(UI): Implement sidebar with Manage Team, Contacts Information, and Invoices Balances sections
- Updated the sidebar to include new sections: Manage Team, Contacts Information, and Invoices Balances.
- Designed and implemented the Manage Team section with a detailed team members table displaying ID, Name, Email, Age, Phone, and Access level.
- Created the Contacts Information section with comprehensive contact details including Registrar ID, Name, Age, Phone, Email, Address, City, and Zip Code.
- Developed the Invoices Balances section for managing and viewing invoice details.
- Ensured responsive design and seamless navigation within the sidebar.

These updates enhance the user interface and improve the usability of the admin dashboard, providing better team and contact management functionalities.

--- a/src/index.css
+++ b/src/index.css
@@ -6,19 +6,20 @@
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 9px;
 }
+
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 10px;
+  background: #f1f1f117;
+
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #1164b7;
+  background-color: #1976d2;
   cursor: grab;
-  border-radius: 10px;
-  border: 3px solid #f1f1f1;
-transition: .3s;
+
+  border: 3px solid #e0e0e0;
+  transition: .3s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
